# peewee-plus

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE.md  Makefile  README.md  peewee_plus.py  pyproject.toml  tox.ini
.github/scripts/: setup-env.sh
.github/workflows/: ci.yaml
tests/: fixtures.py  test_about.py  test_calc_batch_size.py  test_enum_field.py  test_enumfield.py  test_json_field.py  test_jsonfield.py  test_meta.py  test_path_field.py  test_pathfield.py  test_precision_float_field.py  test_timedelta_field.py
