[tool.poetry]
name = "peewee-plus"
version = "0.1.0"
description = "Various extensions, helpers, and utilities for Peewee"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
repository = "https://github.com/enpaul/peewee-plus/"
license = "MIT"
readme = "README.md"
packages = [
  {include = "peewee_plus.py"},
  {include = "tests", format = "sdist"}
]

[tool.poetry.dependencies]
python = "^3.6.1"
peewee = "^3.14.8"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = {version = "^21.11b1", python = "^3.7"}
blacken-docs = {version = "^1.12.0", python = "^3.7"}
ipython = {version = "^7.29.0", python = "^3.7"}
mdformat = "^0.6.4"
mdformat-gfm = "^0.2"
mypy = "^0.910"
pre-commit = "^2.15.0"
pre-commit-hooks = "^4.0.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
reorder-python-imports = "^2.6.0"
safety = "^1.10.3"
toml = "^0.10.2"
tox = "^3.24.4"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.2"}
types-toml = "^0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
