[tool.poetry]
name = "peewee-plus"
version = "1.3.0"
description = "Various extensions, helpers, and utilities for Peewee"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
repository = "https://github.com/enpaul/peewee-plus/"
license = "MIT"
readme = "README.md"
packages = [
  {include = "peewee_plus.py"},
  {include = "tests", format = "sdist"}
]
keywords = ["peewee", "orm", "extension", "plguin", "extra"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Database",
  "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7.1"
peewee = "^3.14.8"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
toml = "^0.10.2"
ruamel-yaml = {version = "^0.17.21", python = "^3.10"}
# This is a workaround for this issue with the Poetry export
# plugin which was blocking the 'security' CI check:
#
# https://github.com/python-poetry/poetry-plugin-export/issues/176
virtualenv = ">=20.15,<20.16"

[tool.poetry.group.ci.dependencies]
poetry = "^1.4.2"
tox = "^3.24.4"
tox-poetry-installer = {version = "^0.10.0", extras = ["poetry"]}

[tool.poetry.group.security.dependencies]
bandit = {version = "^1.7.1", python = "^3.10"}
poetry = {version = "^1.4.2", python = "^3.10"}
safety = {version = "^2.2.0", python = "^3.10"}

[tool.poetry.group.static.dependencies]
black = {version = "^22.8.0", python = "^3.10"}
blacken-docs = {version = "^1.12.0", python = "^3.10"}
mdformat = {version = "^0.7.16", python = "^3.10"}
mdformat-gfm = {version = "^0.3.5", python = "^3.10"}
mypy = {version = "^1.2.0", python = "^3.10"}
pre-commit = {version = "^2.15.0", python = "^3.10"}
pre-commit-hooks = {version = "^4.0.1", python = "^3.10"}
pylint = {version = "^2.13.0", python = "^3.10"}
reorder-python-imports = {version = "^2.6.0", python = "^3.10"}
toml = {version = "^0.10.2", python = "^3.10"}
types-toml = {version = "^0.10.1", python = "^3.10"}

[tool.poetry.group.dev.dependencies]
ipython = {version = "^8.10.0", python = "^3.10"}

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
